openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-frontend
spec:
  selector:
    app: feedback-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
