openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: feedback-app
spec:
  to:
    kind: Service
    name: feedback-frontend
  port:
    targetPort: 80
